# raptor-rust-template

./: Cargo.toml  README.md
.cargo/: config.toml
src/: lib.rs  main.rs
template/: .gitignore  .taplo.toml  CHANGELOG.md  Cargo.toml  LICENSE  README.md  cargo-generate.toml  init-script.rhai
template/.cargo/: config.toml
template/.github/: dependabot.yml
template/.github/workflows/: build-with-idasdk.yml  build-workspace.yml  build.yml  doc-with-idasdk.yml  doc.yml  release-cross.yml  release.yml
template/src/: lib.rs  main.rs
template/tests/: main.rs
template/tests/data/: test.txt
