[package]
name = "{{project-name}}"
version = "0.1.0"
authors = ["Marco Ivaldi <raptor@0xdeadbeef.info>"]
edition = "2024"
description = "{{short-desc}}"
homepage = "https://0xdeadbeef.info/"
repository = "https://github.com/0xdea/{{project-name}}"
# documentation = "https://0xdeadbeef.info/{{project-name}}/{{project-name}}/"
license = "MIT"
keywords = ["TODO", "windows", "redteaming", "exploitation"]
# see https://crates.io/categories
categories = ["command-line-utilities"]
exclude = [".cargo/*", ".github/*", ".img/*", "tests/*"]

[dependencies]
anyhow = "1.0"

# [build-dependencies]

# [dev-dependencies]

# [[test]]
# name = "tests"
# path = "tests/main.rs"
# harness = false

[lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
cargo = { level = "warn", priority = -1 }
# enable some restrictions
unwrap_used = "warn"
expect_used = "warn"
panic = "warn"
todo = "warn"
dbg_macro = "warn"
exhaustive_enums = "warn"
redundant_type_annotations = "warn"
str_to_string = "warn"
missing_docs_in_private_items = "warn"
unnecessary_safety_comment = "warn"
unnecessary_safety_doc = "warn"
multiple_unsafe_ops_per_block = "warn"
allow_attributes_without_reason = "warn"
# allow some lints
# doc_markdown = "allow"
# missing_errors_doc = "allow"
# multiple_crate_versions = "allow"
# significant_drop_tightening = "allow"
# wildcard_imports = "allow"
# must_use_candidate = "allow"

[lints.rust]
missing_docs = { level = "warn" }

# [lints.rustdoc]
# missing_doc_code_examples = { level = "warn" }

[profile.release]
# see https://github.com/johnthagen/min-sized-rust
strip = true
lto = true
# opt-level = 3
# opt-level = "z"
# codegen-units = 1
panic = "abort"

[profile.dev]
debug = false
